<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/bandeira_rs"
            android:src="@drawable/bandeira_rs"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/adote_um_animal_do_rio_grande_do_sul"
            android:textAlignment="center"
            android:textColor="@color/verde_escuro"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/editEmailCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/verde_escuro"
                tools:ignore="Autofill,VisualLintTextFieldSize"/>

            <EditText
                android:id="@+id/editConfirmaEmailCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmar_e_mail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/verde_escuro"
                tools:ignore="Autofill,VisualLintTextFieldSize"/>

            <EditText
                android:id="@+id/editSenhaCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/verde_escuro"
                tools:ignore="Autofill,VisualLintTextFieldSize"/>

            <EditText
                android:id="@+id/editConfirmaSenhaCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmar_senha"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/verde_escuro"
                tools:ignore="Autofill,VisualLintTextFieldSize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <Button
                    android:id="@+id/btnVoltarLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="50"
                    android:backgroundTint="@color/verde_escuro"
                    android:text="@string/voltar_login"
                    tools:ignore="ButtonStyle,VisualLintButtonSize,TextContrastCheck"/>

                <Button
                    android:id="@+id/btnSalvar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="50"
                    android:backgroundTint="@color/verde_escuro"
                    android:text="@string/salvar"
                    tools:ignore="ButtonStyle,TextContrastCheck,VisualLintButtonSize"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>